<resources>
    <string name="app_name" translatable="false">DiscordGalaxyPresence</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="root_access_text">We need root access to grab your Discord token</string>
    <string name="get_root_access">please</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="accessibility_permission">Accessibility permission</string>
    <string name="usage_access_permission">Usage access permission</string>
    <string name="root_permission">Root permission</string>
    <string name="root_permission_granted">The app is using the root method</string>
    <string name="root_permission_denied">The app is using the rootless method to determine if the game is running in foreground</string>
    <string name="usage_access_permission_denied">Not granted. Click here to grant it.</string>
    <string name="usage_access_permission_granted">This permission is granted</string>
    <string name="accessibility_permission_denied">Not enabled. Click here to enable it.</string>
    <string name="accessibility_permission_granted">Accessibility service is enabled.</string>
    <string name="login_with_credentials">Login with credentials</string>
    <string name="set_user_token">Set user token</string>
    <string name="set_user_token_summary">Only change this option if you know what a user token is. If you don\'t, please DON\'T change or show whatever stuff it reveals to anyone.</string>
    <string name="miui_disclaimer">MIUI\'s aggressive battery optimization is often a hurdle regarding background services. It\'s not sure that this app will work on your device.</string>
</resources>