<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Discord settings">

        <Preference
            android:key="login_with_credentials"
            android:title="@string/login_with_credentials" />
        <EditTextPreference
            app:key="discord_token"
            app:title="@string/set_user_token"
            app:summary="@string/set_user_token_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:key="miui_prefdisclaimer" android:title="MIUI" app:isPreferenceVisible="false">
        <Preference app:summary="@string/miui_disclaimer"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="App permissions">
        <Preference
            android:key="accessibility_permission"
            app:title="@string/accessibility_permission"/>
        <Preference
            android:key="usage_access_permission"
            app:title="@string/usage_access_permission"/>
        <Preference
            android:key="root_permission"
            app:title="@string/root_permission" />
    </PreferenceCategory>
</PreferenceScreen>